# fsad_playbook

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  ONBOARDING.md  README.md  add-task-playground.html  cbp-add-task-playground.html  cbp-commit-changes-playground.html  code-review-guide.md  commit-changes-playground.html  feedback.md  fsad-best-practices.md  fsad-playbook-explorable.html  fsad-playbook.html  sec-review-team-anatomy.html  todo.md
.github/workflows/: sec-review-harness.yml
docs/: ux-implementation-plan.md  ux-plan-review.md  ux-review.md
docs/plans/: 2026-03-09-fsad-playbook-design.md  2026-03-09-fsad-playbook-implementation.md  2026-03-09-fsad-playbook-v2.md  2026-03-31-cbp-007-light-mode.md
markdown/completed/: task-cbp-082.md
markdown/to do/: task-cbp-002.md  task-cbp-003.md  task-cbp-008.md  task-cbp-010.md  task-cbp-014.md  task-cbp-015.md  task-cbp-017.md  task-cbp-019.md  task-cbp-022.md  task-cbp-026.md  task-cbp-027.md  task-cbp-028.md  task-cbp-029.md  task-cbp-030.md  task-cbp-031.md  task-cbp-032-phase-03.md  task-cbp-032-phase-05.md  task-cbp-034.md  task-cbp-035.md  task-cbp-037.md  task-cbp-038-phase-02.md  task-cbp-039.md  (+30 more)
scripts/: com.fsad.playbook-updater.plist
skills/sec-review-team/fixtures/desktop-tauri-vulnerable/src-tauri/: Cargo.toml  tauri.conf.json
skills/sec-review-team/fixtures/desktop-tauri-vulnerable/src-tauri/capabilities/: default.json
skills/sec-review-team/fixtures/desktop-tauri-vulnerable/src-tauri/src/: lib.rs
skills/sec-review-team/fixtures/desktop-tauri-vulnerable/src-tauri/src/db/: schema.sql
(+146 files in other folders)
