# DELIBERATELY VULNERABLE fixture. Do not deploy.
[package]
name = "tauri-app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]              # VULN: scaffold default author metadata
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = [] }
# VULN: plaintext SQLite — no sqlcipher feature
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
# VULN: opener declared but unused — configuration-drift risk
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
